Ros2_workspace/log/build_2022-05-21_22-45-23/nn_drone_final/stderr.log
  File "/home/xilinx/wrkspace/install/nn_drone_final/lib/python3.8/site-packages/nn_drone_final/SimpleArmMission.py", line 63
    global armed
    ^
SyntaxError: name 'armed' is assigned to before global declaration

